<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--application name-->
    <string name="app_name">Alofoke Fm</string>
    <string name="sub_about_app_copyright">Copyright © 2025 RcXDev Developer. \nAll right reserved</string>
    <string name="share_content">I Would like to share this with you. Here You Can Download This Application from PlayStore </string>

    <!--navigation drawer menu name-->
    <string name="drawer_section_menu">Menu</string>
    <string name="drawer_section_socials">Socials</string>

    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_settings">Settings</string>

    <!--permission agreement-->
    <string name="permission_title">Thanks for installing Alofoke FM App</string>
    <string name="btn_allow_permissions">Allow permissions now</string>
    <string name="btn_later">I will do it later</string>
    <string name="permission_message">
        <![CDATA[
        <p>Please give us the below permissions :</p>
        <p><strong>PHONE PERMISSION</strong> : it will used to stop playing radio when there is an incoming phone call.</p>
        <p>Do not worry, we guarantee your data is 100% safe and we do not collect any data that you have, the permission you give is only for the purpose of this app running properly.</p>
        ]]>
    </string>

    <!--sleeping timer-->
    <string name="sleep_time">Sleeping Time</string>
    <string name="min">Minutes</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <!--network & error message-->
    <string name="failed_title_text">Whoops!</string>
    <string name="failed_text">No internet connections found. Check your connection or try again later!</string>
    <string name="internet_not_connected">Internet not connected</string>
    <string name="error_loading_radio">Error loading radio or server currently down, please try it again later.</string>
    <string name="msg_cancel_update">Update canceled</string>
    <string name="msg_success_update">Update success!</string>
    <string name="msg_failed_update">Update Failed!</string>

    <!--exit dialog-->
    <string name="message">What do you want to do?</string>
    <string name="dialog_option_cancel">Cancel</string>
    <string name="dialog_option_quit">Exit</string>
    <string name="dialog_option_minimize">Minimize</string>

    <!--settings and others-->
    <string name="title_settings">Settings</string>
    <string name="title_setting_theme">Dark Mode</string>
    <string name="sub_title_setting_theme">Better eyesight and power saving</string>
    <string name="title_setting_notification">Push Notification</string>
    <string name="sub_title_setting_notification">Manage push notification settings</string>
    <string name="title_setting_clear_cache">Clear Cache</string>
    <string name="sub_setting_clear_cache_start">Free up</string>
    <string name="sub_setting_clear_cache_end">of space</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="title_setting_rate">Rate us</string>
    <string name="title_setting_share">Share</string>
    <string name="title_setting_more_apps">More apps</string>
    <string name="title_setting_about">About</string>
    <string name="msg_about_version">Version</string>
    <string name="msg_clear_cache">Are you sure want to clear cache?</string>
    <string name="msg_cache_cleared">cache has been cleared</string>
    <string name="title_additional_permission">Additional permission</string>

    <!--redirect if app suspended-->
    <string name="redirect_title">New App Updates</string>
    <string name="redirect_message">This application has expired and is no longer used, press the button below to download and install the latest update of this application.</string>
    <string name="redirect_button">Download Update Now</string>
    <string name="redirect_error">Whoops! there is problem with the url, try again later</string>

    <!--other string tag name-->
    <string name="sub_about_app_version">Version</string>
    <string name="option_ok">OK</string>
    <string name="btn_retry">RETRY</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="no_social_found">Whoops, no social available at this time</string>

</resources>
