<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lyt_no_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="18dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_no_network" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/failed_title_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/failed_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="@string/failed_text"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_failed_retry"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/bg_button_primary"
                android:text="@string/btn_retry"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>