<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_rate"
                    app:backgroundTint="?colorPrimary"
                    app:elevation="0dp"
                    app:fabCustomSize="30dp"
                    app:fabSize="normal"
                    app:maxImageSize="18dp"
                    app:pressedTranslationZ="0dp"
                    app:tint="@color/color_white" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_share"
                    app:backgroundTint="?colorPrimary"
                    app:elevation="0dp"
                    app:fabCustomSize="30dp"
                    app:maxImageSize="18dp"
                    app:pressedTranslationZ="0dp"
                    app:tint="@color/color_white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        android:visibility="gone"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/corner_radius_medium"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:id="@+id/native_ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lyt_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="@dimen/corner_radius_large"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp"
                app:cardPreventCornerOverlap="false">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/dialog_option_cancel"
                    android:textColor="@color/color_light_primary" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/corner_radius_large"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_neutral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/dialog_option_minimize"
                android:textColor="@color/color_light_primary" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="@dimen/corner_radius_large"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="false">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/dialog_option_quit"
                android:textColor="@color/color_light_primary" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>